// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeatureChart /> spec Feature Chart renders component with custom expression 1`] = `
<div>
  <div
    class="euiPanel euiPanel--paddingMedium"
    style="padding: 20px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--small content-panel-title"
        >
          feature-name
        </h3>
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiText euiText--small"
            >
              <span
                class="content-panel-subTitle"
                style="padding-right: 20px;"
              >
                Custom expression:
                 
                <button
                  class="euiLink euiLink--primary"
                  type="button"
                >
                  View code
                </button>
              </span>
              <span
                class="content-panel-subTitle"
              >
                State: 
                Enabled
                 
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
    />
    <div
      style="padding: 10px 0px;"
    >
      <div
        style="height: 200px; width: 100%; opacity: 1;"
      >
        <div
          class="echChart"
        >
          <div
            class="echChartStatus"
            data-ech-render-complete="true"
            data-ech-render-count="1"
          />
          <div
            class="echChartResizer"
          />
          <div
            class="echLegend echLegend--right"
          >
            <div
              class="echLegendListContainer"
              style="width: 30px; max-width: 30px;"
            >
              <div
                class="echLegendList"
                style="padding-top: 10px; padding-bottom: 10px;"
              >
                <div
                  class="echLegendItem echLegendItem--right"
                >
                  <div
                    aria-label="series color"
                    class="echLegendItem__color"
                    title="series color"
                  >
                    <svg
                      class="echIcon"
                      color="#16191F"
                      focusable="false"
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <defs>
                        <circle
                          cx="8"
                          cy="8"
                          id="dot-a"
                          r="4"
                        />
                      </defs>
                      <g>
                        <use
                          xlink:href="#dot-a"
                        />
                      </g>
                    </svg>
                  </div>
                  <div
                    class="echLegendItem__label"
                    title="anomaly grade"
                  >
                    anomaly grade
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="echContainer"
          >
            <div
              class="echChartPointerContainer"
              style="cursor: default;"
            >
              <div
                class="echCrosshair"
              />
              <svg
                class="echHighlighter"
              >
                <defs>
                  <clippath
                    id="echHighlighterClipPath__8b98b90c-2a00-4930-87c2-73283f698f6b"
                  >
                    <rect
                      height="0"
                      width="0"
                      x="0"
                      y="0"
                    />
                  </clippath>
                </defs>
                <g
                  transform="translate(0, 0) rotate(0)"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FeatureChart /> spec Feature Chart renders component with simple aggregation 1`] = `
<div>
  <div
    class="euiPanel euiPanel--paddingMedium"
    style="padding: 20px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--small content-panel-title"
        >
          feature-name
        </h3>
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiText euiText--small"
            >
              <span
                class="content-panel-subTitle"
                style="padding-right: 20px;"
              >
                Field: 
                value
              </span>
              <span
                class="content-panel-subTitle"
                style="padding-right: 20px;"
              >
                Aggregation method: 
                sum
              </span>
              <span
                class="content-panel-subTitle"
              >
                State: 
                Enabled
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
    />
    <div
      style="padding: 10px 0px;"
    >
      <div
        style="height: 200px; width: 100%; opacity: 1;"
      >
        <div
          class="echChart"
        >
          <div
            class="echChartStatus"
            data-ech-render-complete="true"
            data-ech-render-count="1"
          />
          <div
            class="echChartResizer"
          />
          <div
            class="echLegend echLegend--right"
          >
            <div
              class="echLegendListContainer"
              style="width: 30px; max-width: 30px;"
            >
              <div
                class="echLegendList"
                style="padding-top: 10px; padding-bottom: 10px;"
              >
                <div
                  class="echLegendItem echLegendItem--right"
                >
                  <div
                    aria-label="series color"
                    class="echLegendItem__color"
                    title="series color"
                  >
                    <svg
                      class="echIcon"
                      color="#16191F"
                      focusable="false"
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <defs>
                        <circle
                          cx="8"
                          cy="8"
                          id="dot-a"
                          r="4"
                        />
                      </defs>
                      <g>
                        <use
                          xlink:href="#dot-a"
                        />
                      </g>
                    </svg>
                  </div>
                  <div
                    class="echLegendItem__label"
                    title="anomaly grade"
                  >
                    anomaly grade
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="echContainer"
          >
            <div
              class="echChartPointerContainer"
              style="cursor: default;"
            >
              <div
                class="echCrosshair"
              />
              <svg
                class="echHighlighter"
              >
                <defs>
                  <clippath
                    id="echHighlighterClipPath__ba8dfbf0-f32a-4556-931b-143a21dcf6f6"
                  >
                    <rect
                      height="0"
                      width="0"
                      x="0"
                      y="0"
                    />
                  </clippath>
                </defs>
                <g
                  transform="translate(0, 0) rotate(0)"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
